# kexec-loader

./: .gitignore  COPYING  ChangeLog  MAKEDEV  Makefile  Makefile.in  README  README.html  TODO  addmod.sh  build.html  cdrom-readme.html  changelog.txt  config.h  configure.in  conv-keymap.pl  kexec-loader.conf  license.html  mkinitramfs.sh  mkiso.sh  modinfo.pl  tarmods.pl
patches/: kexec-tools-1.101-merge.diff  kexec-tools-1.101-mini.diff  kexec-tools-2.0.0.diff  kexec-tools-2.0.1.diff  kexec-tools-2.0.2.diff  kexec-tools-2.0.25.diff  linux-2.6.13-kl-mkdev.diff  linux-2.6.13-kl-sfloppy.diff  linux-2.6.13-sfloppy.diff  mdadm-4.2-x86.patch
src/: Makefile  boot.c  config.c  config.h  console.c  console.h  ctconfig.h  debug.c  debug.h  disk.c  disk.h  elf.c  elf.h  globcmp.c  globcmp.h  grub.c  grub.h  kexec.c  kexec.h  keymap.c  main.c  main.h  menu.c  menu.h  misc.c  misc.h  mkdev.c  mkdev.h  mkklm.c  modprobe.c  modprobe.h  mount.c  mount.h  mystring.c  mystring.h  shell.c  shell.h  tar.c  trace.c  vfs.c  (+1 more)
utils/: Makefile  init.c  klinit.c
